# dfr-trigger

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  opencode.json  publish.yml  pyproject.toml  render.yaml
.opencode/plugins/: superpowers-guard.js
.publish/: runtime.env  start.sh
app/: api.py  audit_store.py  config_store.py  crypto.py  db.py  dispatch.py  fh2.py  geocoding.py  idempotency.py  main.py  maintenance.py  redaction.py  schemas.py  security.py  settings.py
app/static/: styles.css
app/static/i18n/: en.json  pt.json
app/static/js/: api.js  configuration.js  dispatch.js  i18n.js  live.js  logs.js  main.js  map.js  navigation.js  task-progress.js
app/templates/: index.html  phone.html
docs/: fh2-contract-evidence.md  release-checklist.md
docs/superpowers/plans/: 2026-07-14-dfr-trigger-implementation.md
docs/superpowers/specs/: 2026-07-14-dfr-trigger-design.md
tests/: conftest.py  test_audit_idempotency.py  test_config_store.py  test_fh2_dispatch.py  test_geocoding.py  test_health.py  test_release_gates.py  test_security.py
tests/browser/: __init__.py  conftest.py  test_ui.py
workers/: package.json  wrangler.toml
workers/migrations/: 0001_init.sql
workers/src/: index.ts
