[project]
name = "dfr-trigger"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography==45.0.4",
  "fastapi==0.115.14",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "pydantic-settings==2.10.1",
  "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
  "playwright==1.53.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "pytest-playwright==0.7.0",
  "respx==0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
